feat: Added tabs component

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/flauc/ng2-simple-components",
   "peerDependencies": {
     "@angular/core": "^2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4"
   },
   "devDependencies": {
     "@angular/core": "^2.0.0-rc.4",
