--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/flauc/ng2-simple-components",
   "peerDependencies": {
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4"
+    "@angular/core": "^2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5"
   },
   "devDependencies": {
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/core": "^2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "del": "^2.2.2",
     "es6-shim": "^0.35.0",
     "gulp": "^3.9.1",
     "reflect-metadata": "0.1.2",
