feat: Added accordion module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "components.d.ts",
     "src/tabs/tabs.component.ts",
     "src/tabs/tabs.module.ts",
-    "src/tabs/tab.component.ts"
+    "src/tabs/tab.component.ts",
+    "src/accordion/accord.component.ts",
+    "src/accordion/accordion.component.ts",
+    "src/accordion/accordion.module.ts"
   ]
 }
