--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng2-simple-components",
   "version": "0.0.1",
-  "description": "A set of components and directives for angular 2 applications ",
+  "description": "A set of helpful and minimalistic components, directives and services for angular 2 applications",
   "scripts": {
     "build": "typings install && tsc"
   },
