--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "ng2-simple-components",
+  "name": "gh-pages",
   "version": "0.0.1",
-  "description": "A set of helpful and minimalistic components, directives and services for angular 2 applications",
-  "scripts": {
-    "build": "typings install && tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/flauc/ng2-simple-components.git"
-  },
-  "keywords": [
-    "Angular 2"
-  ],
-  "author": "filip.lauc93@gmail.com",
+  "author": "Filip Lauc",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/flauc/ng2-simple-components/issues"
-  },
-  "homepage": "https://github.com/flauc/ng2-simple-components",
-  "peerDependencies": {
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5"
+  "dependencies": {
+    "reflect-metadata": "^0.1.3",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/upgrade": "2.0.0-rc.5",
+    "core-js": "^2.4.0",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "del": "^2.2.2",
-    "es6-shim": "^0.35.0",
+    "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.6",
+    "gulp-angular-embed-templates": "^2.2.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^2.0.10",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-inject": "^4.1.0",
+    "gulp-rimraf": "^0.2.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-symdest": "^1.0.0",
+    "gulp-typescript": "^2.13.6",
+    "gulp-uglify": "^1.5.3",
+    "run-sequence": "^1.2.1",
+    "stream-series": "^0.1.1",
+    "systemjs-builder": "^0.15.23",
     "typescript": "^1.8.10",
-    "typings": "^0.7.12",
-    "zone.js": "~0.6.12"
-  },
-  "main": "./components.js",
-  "typings": "./components.d.ts"
+    "typings": "^0.8.1"
+  }
 }
