--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "author": "Filip Lauc",
   "license": "MIT",
+  "scripts": {
+    "prod": "gulp prod-build"
+  },
+  "pre-push": ["prod"],
   "dependencies": {
     "reflect-metadata": "^0.1.3",
     "@angular/common": "2.0.0-rc.5",
@@ -32,6 +36,7 @@
     "gulp-symdest": "^1.0.0",
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^1.5.3",
+    "pre-push": "^0.1.1",
     "run-sequence": "^1.2.1",
     "stream-series": "^0.1.1",
     "systemjs-builder": "^0.15.23",
