--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "del": "^2.2.2",
     "es6-shim": "^0.35.0",
     "gulp": "^3.9.1",
+    "browser-sync": "^2.14.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
     "typescript": "^1.8.10",
