--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "prod": "gulp prod-build"
   },
-  "pre-push": ["prod"],
+  "pre-push": [
+    "prod"
+  ],
   "dependencies": {
-    "reflect-metadata": "^0.1.3",
     "@angular/common": "2.0.0-rc.5",
     "@angular/compiler": "2.0.0-rc.5",
     "@angular/core": "2.0.0-rc.5",
     "@angular/platform-browser": "2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/upgrade": "2.0.0-rc.5",
-    "ng2-simple-components": "0.0.1",
     "core-js": "^2.4.0",
+    "ng2-simple-components": "0.0.4",
+    "prismjs": "^1.5.1",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
     "zone.js": "^0.6.12"
