feat: Working on modal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     "src/block-slider/block-slider.component.ts",
     "src/block-slider/block.component.ts",
     "src/select/select.module.ts",
-    "src/select/select.component.ts"
+    "src/select/select.component.ts",
+    "src/modal/modal.component",
+    "src/modal/modal.module",
+    "src/modal/modal.service"
   ]
 }
