--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "src/select/select.component.ts",
     "src/modal/modal.component.ts",
     "src/modal/modal.module.ts",
-    "src/modal/modal.service.ts"
+    "src/modal/modal.service.ts",
+    "src/modal/settings.interface.ts"
   ]
 }
