--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-simple-components",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "A set of helpful and minimalistic components, directives and services for angular 2 applications",
   "scripts": {
     "build": "typings install && tsc"
@@ -19,21 +19,23 @@
   },
   "homepage": "https://github.com/flauc/ng2-simple-components",
   "peerDependencies": {
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5"
+    "@angular/core": "^2.0.0-rc.6",
+    "@angular/common": "^2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6"
   },
   "devDependencies": {
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/core": "^2.0.0-rc.6",
+    "@angular/common": "^2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
     "del": "^2.2.2",
     "es6-shim": "^0.35.0",
     "gulp": "^3.9.1",
     "browser-sync": "^2.14.0",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.6",
-    "typescript": "^1.8.10",
+    "rxjs": "5.0.0-beta.11",
+    "typescript": "^2.0.2",
     "typings": "^0.7.12",
-    "zone.js": "~0.6.12"
+    "zone.js": "~0.6.17"
   },
   "main": "./components.js",
   "typings": "./components.d.ts"
