--- a/example/package.json
+++ b/example/package.json
@@ -14,9 +14,10 @@
     "@angular/core": "2.0.0-rc.6",
     "@angular/platform-browser": "2.0.0-rc.6",
     "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
     "@angular/upgrade": "2.0.0-rc.6",
     "core-js": "^2.4.0",
-    "ng2-simple-components": "^0.1.8",
+    "ng2-simple-components": "^0.1.9",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.11",
     "systemjs": "0.19.27",
