--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular2-quickstart",
+  "name": "ng2-simple-components-example",
   "version": "1.0.0",
   "scripts": {
     "postinstall": "typings install",
@@ -7,24 +7,26 @@
     "tsc:w": "tsc -w",
     "typings": "typings"
   },
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.7",
-    "@angular/compiler": "2.0.0-rc.7",
-    "@angular/core": "2.0.0-rc.7",
-    "@angular/platform-browser": "2.0.0-rc.7",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.7",
-    "@angular/forms": "2.0.0-rc.7",
-    "@angular/upgrade": "2.0.0-rc.7",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "@angular/upgrade": "2.0.0",
     "core-js": "^2.4.1",
-    "ng2-simple-components": "^0.2.2",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.21"
+    "zone.js": "^0.6.23",
+    "ng2-simple-components": "^0.2.3"
   },
   "devDependencies": {
     "typescript": "^2.0.2",
-    "typings": "^1.0.4"
+    "typings":"^1.3.2"
   }
 }
