--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-simple-components",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "A set of helpful and minimalistic components, directives and services for angular 2 applications",
   "scripts": {
     "build": "typings install && tsc"
@@ -19,25 +19,25 @@
   },
   "homepage": "https://github.com/flauc/ng2-simple-components",
   "peerDependencies": {
-    "@angular/core": "^2.0.0-rc.7",
-    "@angular/common": "^2.0.0-rc.7",
-    "@angular/platform-browser": "2.0.0-rc.7"
+    "@angular/core": "^2.0.0",
+    "@angular/common": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.7",
-    "@angular/core": "^2.0.0-rc.7",
-    "@angular/platform-browser": "2.0.0-rc.7",
+    "@angular/core": "^2.0.0",
+    "@angular/common": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
     "browser-sync": "^2.14.0",
     "del": "^2.2.2",
-    "es6-shim": "^0.35.0",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.23",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-delete-lines": "0.0.7",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.12",
     "typescript": "^2.0.2",
-    "typings": "^0.7.12",
-    "zone.js": "~0.6.21"
+    "typings": "^1.3.2"
   },
   "main": "./components.js",
   "typings": "./components.d.ts"
