--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/core": "^2.0.0",
     "@angular/common": "^2.0.0",
     "@angular/platform-browser": "^2.0.0",
-    "hammerjs": "^2.0.8"
+    "hammerjs": "^2.0.8",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@angular/core": "^2.0.0",
