--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     "outDir": "./lib",
     "declaration": true,
+    "lib": ["es6", "dom"],
     "types": [
       "node"
     ]
